[package]
name = "dlauncher"
version = "0.1.1"
edition = "2021"
licence = "GPL-3.0"
licence-file = "LICENSE"
description = "An application launcher for Linux that is based on Ulauncher"
homepage = "https://github.com/diced/dlauncher"
repository = "https://github.com/diced/dlauncher"
documentation = "https://docs.rs/dlauncher"
default-run = "dlauncher"

[[bin]]
name = "dlauncher"
path = "src/dlauncher.rs"

[[bin]]
name = "dlauncher-toggle"
path = "src/dlauncher-toggle.rs"

[dependencies]
gtk = { version = "0.15.5", features = ["v3_22"] }
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
regex = "1.5.5"
libc = "0.2.1"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0.79"
libloading = "0.7.3"
dashmap = { version = "5.3.3", features = ["serde"] }
log = "0.4.17"
env_logger = "0.9.0"
shell-words = "1.1.0"

[profile.release]
strip = true
codegen-units = 1
incremental = true